Update index.html with new content and structure

--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Lets see a NEW CHANGE Oct 17, 15:19.
+<!DOCTYPE html>
+<html>
+
+<head>
+    <title>TEST</title>
+</head>
+<body>
+<h2>Updated: Oct 17, 15:19.</h2>
+
+<p><a href="schedule.html">Schedule</a></p>
+</body>
+</html>
