--- a/schedule.html
+++ b/schedule.html
@@ -33,6 +33,14 @@
             font-weight: bold;
         }
 
+        .footnote {
+            font-size: 16px;
+            font-style: italic;
+            color: #555555;
+            margin-left: 20px;
+            margin-top: 10px;
+        }
+
         #scheduleTable_wrapper {
             margin-left: 20px;
             margin-right: 20px;
@@ -4363,10 +4371,11 @@
     </tr>
   </tbody>
 </table>
+    </div>
+    <p class="footnote">Last updated: October 18, 2025</p>
 
         <script>
             new DataTable('#scheduleTable', {
-                // Initialize the DataTable on the table with the ID "myTable"
                 paging: false,
                 searching: true,
                 ordering: true,
