--- a/winter.html
+++ b/winter.html
@@ -29,7 +29,7 @@
             margin-top: 40px;
             margin-bottom: 20px;
             color: #000000;;
-            font-family: Sofia, Arial, sans-serif;
+            font-family: Arial, sans-serif;
             font-weight: bold;
         }
 
@@ -50,9 +50,11 @@
             font-weight: bold;
         }
 
-        table.dataTable th,
-        td {
+        table.dataTable th, td {
             font-size: 16px;
+            font-family: Arial, sans-serif;
+            padding: 5px !important;
+            margin: 1px;
         }
 
         table>tbody>tr:nth-child(even) td {
@@ -540,18 +542,18 @@
                     bottomEnd: 'paging'
                 },
                 columnDefs: [
-                    { targets: 0, width: '13%' },
+                    { targets: 0, width: '11%' },
                     { targets: 1, width: '3%' },
-                    { targets: 2, width: '20%' },
+                    { targets: 2, width: '15%' },
                     { targets: 3, width: '3%' },
                     { targets: 4, width: '7%' },
                     { targets: 5, width: '7%' },
-                    { targets: 6, width: '10%' },
+                    { targets: 6, width: '8%' },
                     { targets: 7, width: '17%' },
                     { targets: 8, width: '5%' },
                     { targets: 9, width: '4%' },
                     { targets: 10, width: '4%' },
-                    { targets: 11, width: '7%' }
+                    { targets: 11, width: '16%' }
                 ],
             });
 
