Add semestr links to index.html

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <title>TEST</title>
 </head>
 <body>
-<h2>Updated: Oct 17, 15:19.</h2>
-
-<p><a href="schedule.html">Schedule</a></p>
+    <p><a href="summer.html">Summer</a></p>
+    <p><a href="fall.html">Fall</a></p>
+    <p><a href="winter.html">Winter</a></p>
+    <p><a href="spring.html">Spring</a></p>
 </body>
 </html>
