--- a/spring.html
+++ b/spring.html
@@ -4394,7 +4394,7 @@
   </tbody>
 </table>
     </div>
-    <p class="footnote">Last updated: October 20, 2025</p>
+    <p class="footnote">Last updated: October 20, 2025 13:13</p>
 
         <script>
             new DataTable('#scheduleTable', {
