--- a/winter.html
+++ b/winter.html
@@ -530,7 +530,7 @@
   </tbody>
 </table>
     </div>
-    <p class="footnote">Last updated: October 20, 2025</p>
+    <p class="footnote">Last updated: October 20, 2025 13:13</p>
 
         <script>
             new DataTable('#scheduleTable', {
