--- a/summer.html
+++ b/summer.html
@@ -628,7 +628,7 @@
   </tbody>
 </table>
     </div>
-    <p class="footnote">Last updated: October 20, 2025</p>
+    <p class="footnote">Last updated: October 20, 2025 13:13</p>
 
         <script>
             new DataTable('#scheduleTable', {
