--- a/spring.html
+++ b/spring.html
@@ -339,8 +339,8 @@
       <td>11:30 AM</td>
       <td>01:10 PM</td>
       <td>Cooke 248</td>
-      <td>Unknown</td>
-      <td></td>
+      <td>Suddaby, Jacquie</td>
+      <td>jmsuddab@buffalo.edu</td>
       <td>0</td>
       <td>35</td>
       <td>In person</td>
@@ -353,8 +353,8 @@
       <td>01:30 PM</td>
       <td>03:10 PM</td>
       <td>Cooke 248</td>
-      <td>Unknown</td>
-      <td></td>
+      <td>Suddaby, Jacquie</td>
+      <td>jmsuddab@buffalo.edu</td>
       <td>0</td>
       <td>35</td>
       <td>In person</td>
@@ -4394,7 +4394,7 @@
   </tbody>
 </table>
     </div>
-    <p class="footnote">Last updated: October 20, 2025 14:04</p>
+    <p class="footnote">Last updated: October 21, 2025 09:04</p>
 
         <script>
             new DataTable('#scheduleTable', {
