--- a/winter.html
+++ b/winter.html
@@ -115,8 +115,8 @@
       <td></td>
       <td></td>
       <td>Remote</td>
-      <td>Beyer, Brian</td>
-      <td>brianbey@buffalo.edu</td>
+      <td>Suddaby, Jacquie</td>
+      <td>jmsuddab@buffalo.edu</td>
       <td>6</td>
       <td>50</td>
       <td>Remote: not real time</td>
@@ -145,7 +145,7 @@
       <td>Remote</td>
       <td>Unknown</td>
       <td></td>
-      <td>5</td>
+      <td>7</td>
       <td>70</td>
       <td>Remote: real time and recorded</td>
     </tr>
@@ -159,7 +159,7 @@
       <td>Remote</td>
       <td>Unknown</td>
       <td></td>
-      <td>5</td>
+      <td>7</td>
       <td>70</td>
       <td>Remote: real time and recorded</td>
     </tr>
@@ -173,7 +173,7 @@
       <td>Remote</td>
       <td>Unknown</td>
       <td></td>
-      <td>5</td>
+      <td>7</td>
       <td>70</td>
       <td>Remote: real time and recorded</td>
     </tr>
@@ -187,7 +187,7 @@
       <td>Remote</td>
       <td>Unknown</td>
       <td></td>
-      <td>5</td>
+      <td>7</td>
       <td>70</td>
       <td>Remote: real time and recorded</td>
     </tr>
@@ -481,7 +481,7 @@
       <td>Remote</td>
       <td>Unknown</td>
       <td></td>
-      <td>3</td>
+      <td>4</td>
       <td>70</td>
       <td>Remote: real time and recorded</td>
     </tr>
@@ -495,7 +495,7 @@
       <td>Remote</td>
       <td>Unknown</td>
       <td></td>
-      <td>3</td>
+      <td>4</td>
       <td>70</td>
       <td>Remote: real time and recorded</td>
     </tr>
@@ -509,7 +509,7 @@
       <td>Remote</td>
       <td>Unknown</td>
       <td></td>
-      <td>3</td>
+      <td>4</td>
       <td>70</td>
       <td>Remote: real time and recorded</td>
     </tr>
@@ -523,14 +523,14 @@
       <td>Remote</td>
       <td>Unknown</td>
       <td></td>
-      <td>3</td>
+      <td>4</td>
       <td>70</td>
       <td>Remote: real time and recorded</td>
     </tr>
   </tbody>
 </table>
     </div>
-    <p class="footnote">Last updated: October 20, 2025 14:04</p>
+    <p class="footnote">Last updated: October 21, 2025 09:04</p>
 
         <script>
             new DataTable('#scheduleTable', {
