--- a/spring.html
+++ b/spring.html
@@ -4172,8 +4172,8 @@
       <td>LEC</td>
       <td>Intro Numeric Analysis 2</td>
       <td>TR</td>
-      <td>09:30 AM</td>
-      <td>10:50 AM</td>
+      <td>12:30 PM</td>
+      <td>01:50 PM</td>
       <td>Math 205</td>
       <td>Dyachenko, Sergey</td>
       <td>sergeydy@buffalo.edu</td>
@@ -4188,11 +4188,11 @@
       <td>TR</td>
       <td>09:30 AM</td>
       <td>10:50 AM</td>
-      <td>Baldy 118</td>
+      <td>Math 205</td>
       <td>Spencer, Brian</td>
       <td>spencerb@buffalo.edu</td>
       <td>0</td>
-      <td>15</td>
+      <td>11</td>
       <td>In person</td>
     </tr>
     <tr>
@@ -4394,7 +4394,7 @@
   </tbody>
 </table>
     </div>
-    <p class="footnote">Last updated: October 22, 2025 09:04</p>
+    <p class="footnote">Last updated: October 23, 2025 09:04</p>
 
         <script>
             new DataTable('#scheduleTable', {
