--- a/spring.html
+++ b/spring.html
@@ -2634,7 +2634,7 @@
       <td>W</td>
       <td>03:00 PM</td>
       <td>03:50 PM</td>
-      <td>Clemen 119</td>
+      <td>Baldy 108</td>
       <td>Unknown</td>
       <td></td>
       <td>0</td>
@@ -4394,7 +4394,7 @@
   </tbody>
 </table>
     </div>
-    <p class="footnote">Last updated: October 24, 2025 09:04</p>
+    <p class="footnote">Last updated: October 25, 2025 09:04</p>
 
         <script>
             new DataTable('#scheduleTable', {
